# templates

./: .gitignore  index.html
glfw-rs/: Cargo.toml
glfw-rs/src/: main.rs
macroquad-rs/: Cargo.toml  index.html
macroquad-rs/src/: engine.rs  index.html  main.rs
min-sdl3/: build.bat  main.c  shader.frag.hlsl  shader.vert.hlsl
raylib-odin/: README.md  build_debug.bat  build_hot_reload.bat  build_hot_reload.sh  build_release.bat  build_web.bat  main.odin
raylib-odin/src/: game.odin
raylib-rs/: Cargo.toml
raylib-rs/src/: main.rs
sdl-c/: Makefile  build.bat  clip.c  main.c
sdl2-rs/: Cargo.toml
sdl2-rs/src/: main.rs
sdl3-c/: Makefile  build.bat  build.zig  build.zig.zon  gl.c  gpu.c  main.c  pjp.h  render.c  test.c  types.h
sdl3-c/shaders/: 2d.frag  2d.frag.hlsl  2d.vert  2d.vert.hlsl
sdl3-sys-rs/: Cargo.toml  README.md  build.rs  index.html
sdl3-sys-rs/src/: main.rs  solid_color.frag  triangle.vert
sdlgl/: Makefile  main.cpp
sdlgl-cpp/: main.cpp
sokol/: Makefile  build.bat
sokol/src/: main.c  main2.c  ppl.c  ppl.h
wayland-c/: generate-logo.sh  wayland-logo.h  wayland.c
web/: index.html  script.js
win32-c/: gpu.hlsl  main.c  main.cpp
