[package]
name = "macroquad-rs"
version = "0.1.0"
edition = "2021"

default-run = "macroquad-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.13", features = ["audio"] }
rfd = "0.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
